ingress/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  rules:
  - host: main.fakhri.com
    http:
      paths:
        - backend:
            service:
              name: main
              port:
                number: 80
          pathType: Prefix
          path: "/main"

  - host: web1.fakhri.com
    http:
      paths:
        - backend:
            service:
              name: web1
              port:
                number: 80
          pathType: Prefix
          path: "/web1"

  - host: web2.fakhri.com
    http:
      paths:
        - backend:
            service:
              name: web2
              port:
                number: 80
          pathType: Prefix
          path: "/web2"
